rename old btn-light -> btn-light-outlined so it wont override loki's

--- a/account/invite-friends.html
+++ b/account/invite-friends.html
@@ -169,7 +169,7 @@
                     <div class="products-container__where-wrapper">
                       <button
                         type="button"
-                        class="btn-light"
+                        class="btn-light-outlined"
                         id="show-more-details-button"
                       >
                         Show more details
