--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -1497,7 +1497,7 @@
                                             data-testid="social-auth-button-facebook"
                                             aria-label="Continue with Facebook"
                                             type="submit"
-                                            class="btn-light"
+                                            class="btn-light-outlined"
                                           >
                                             <div class="_1a2vq1h">
                                               <div class="flex-grow-0">
@@ -1564,7 +1564,7 @@
                                             data-testid="social-auth-button-google"
                                             aria-label="Continue with Google"
                                             type="submit"
-                                            class="btn-light"
+                                            class="btn-light-outlined"
                                           >
                                             <div class="_1a2vq1h">
                                               <div class="flex-grow-0">
@@ -1627,7 +1627,7 @@
                                             data-testid="social-auth-button-apple"
                                             aria-label="Continue with Apple"
                                             type="submit"
-                                            class="btn-light"
+                                            class="btn-light-outlined"
                                           >
                                             <div class="_1a2vq1h">
                                               <div class="flex-grow-0">
@@ -1662,7 +1662,7 @@
                                           data-testid="social-auth-button-email"
                                           aria-label="Continue with email"
                                           type="button"
-                                          class="btn-light continue-btn-email"
+                                          class="btn-light-outlined continue-btn-email"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -1694,7 +1694,7 @@
                                           data-testid="social-auth-button-phone"
                                           aria-label="Continue with Phone"
                                           type="button"
-                                          class="btn-light continue-btn-phone hidden"
+                                          class="btn-light-outlined continue-btn-phone hidden"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -4888,7 +4888,7 @@
                                           data-testid="social-auth-button-facebook"
                                           aria-label="Continue with Facebook"
                                           type="submit"
-                                          class="btn-light"
+                                          class="btn-light-outlined"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -4953,7 +4953,7 @@
                                           data-testid="social-auth-button-google"
                                           aria-label="Continue with Google"
                                           type="submit"
-                                          class="btn-light"
+                                          class="btn-light-outlined"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -5016,7 +5016,7 @@
                                           data-testid="social-auth-button-apple"
                                           aria-label="Continue with Apple"
                                           type="submit"
-                                          class="btn-light"
+                                          class="btn-light-outlined"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -5051,7 +5051,7 @@
                                         data-testid="social-auth-button-email"
                                         aria-label="Continue with email"
                                         type="button"
-                                        class="btn-light continue-btn-email"
+                                        class="btn-light-outlined continue-btn-email"
                                       >
                                         <div class="_1a2vq1h">
                                           <div class="flex-grow-0">
@@ -5083,7 +5083,7 @@
                                         data-testid="social-auth-button-phone"
                                         aria-label="Continue with Phone"
                                         type="button"
-                                        class="btn-light continue-btn-phone hidden"
+                                        class="btn-light-outlined continue-btn-phone hidden"
                                       >
                                         <div class="_1a2vq1h">
                                           <div class="flex-grow-0">
