--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -5971,7 +5971,7 @@
                                                         <a
                                                           rel="nofollow"
                                                           href="/contact_host/16354372/send_message?adults=1"
-                                                          class="btn-light"
+                                                          class="btn-light-outlined"
                                                           >Contact Host</a
                                                         >
                                                       </div>
