--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -354,7 +354,7 @@
                               </div>
                               <div class="place__show-photos-wrapper">
                                 <div class="place__show-photos-btn">
-                                  <button type="button" class="btn-light-small">
+                                  <button type="button" class="btn-light-outlined-small">
                                     <div class="place__show-photos-icon-wrapper">
                                       <span class="place__show-photos-icon"
                                         ><svg
