--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -1115,7 +1115,7 @@
             </div>
           </div>
         </div>
-        <div class="_15lzjb6"><button type="button" class="btn-light">Show all photos</button></div>
+        <div class="_15lzjb6"><button type="button" class="btn-light-outlined">Show all photos</button></div>
       </div>
     </div>
   </div>
@@ -5801,7 +5801,7 @@
                                                         <a
                                                           rel="nofollow"
                                                           href="/contact_host/16354372/send_message?adults=1"
-                                                          class="btn-light"
+                                                          class="btn-light-outlined"
                                                           >Contact Host</a
                                                         >
                                                       </div>
