--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -4255,7 +4255,7 @@
                                                       </ul>
                                                       <div class="ba4vpmz dir dir-ltr">
                                                         <a rel="nofollow" href="/contact_host/16354372/send_message?adults=1"
-                                                          class="btn-light">Contact Host</a>
+                                                          class="btn-light-outlined">Contact Host</a>
                                                       </div>
                                                       <div class="d1dz8pu3 dir dir-ltr">
                                                         <div class="c17fz67d dir dir-ltr">
