--- a/lps-resources/help.html
+++ b/lps-resources/help.html
@@ -1574,7 +1574,7 @@
                                                     <a
                                                       data-testid="explore-more-contact-us"
                                                       href="/help/contact-us"
-                                                      class="btn-light"
+                                                      class="btn-light-outlined"
                                                       >Contact us</a
                                                     >
                                                   </div>
@@ -3656,7 +3656,7 @@
                                                     <a
                                                       data-testid="explore-more-contact-us"
                                                       href="/help/contact-us"
-                                                      class="btn-light"
+                                                      class="btn-light-outlined"
                                                       >Contact us</a
                                                     >
                                                   </div>
@@ -4710,7 +4710,7 @@
                                                     <a
                                                       data-testid="explore-more-contact-us"
                                                       href="/help/contact-us"
-                                                      class="btn-light"
+                                                      class="btn-light-outlined"
                                                       >Contact us</a
                                                     >
                                                   </div>
@@ -5767,7 +5767,7 @@
                                                     <a
                                                       data-testid="explore-more-contact-us"
                                                       href="/help/contact-us"
-                                                      class="btn-light"
+                                                      class="btn-light-outlined"
                                                       >Contact us</a
                                                     >
                                                   </div>
