--- a/listings-product/explore-when.html
+++ b/listings-product/explore-when.html
@@ -2886,7 +2886,7 @@
                                                                                 >
                                                                                   <button
                                                                                     type="button"
-                                                                                    class="btn-light"
+                                                                                    class="btn-light-outlined"
                                                                                   >
                                                                                     Load
                                                                                     more
