root till spacer-6

--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -21909,7 +21909,7 @@
                         <div class="_3hmsj">
                           <div style="
                                   display: contents;
-                                  --dls19-brand-color: var(--f-k-smk-x);
+                                  --dls19-brand-color: var(--gray-900);
                                 ">
                             <div class="_le6wlg">
                               <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
@@ -22678,7 +22678,7 @@
                       <div class="_3hmsj">
                         <div style="
                                 display: contents;
-                                --dls19-brand-color: var(--f-k-smk-x);
+                                --dls19-brand-color: var(--gray-900);
                               ">
                           <div class="_1ynbv25">
                             <div class="c1yo0219 dir dir-ltr">
@@ -22842,7 +22842,7 @@
                         <div class="_3hmsj">
                           <div style="
                                   display: contents;
-                                  --dls19-brand-color: var(--f-k-smk-x);
+                                  --dls19-brand-color: var(--gray-900);
                                 ">
                             <div class="_le6wlg">
                               <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
@@ -23976,7 +23976,7 @@
                         <div class="_3hmsj">
                           <div style="
                                   display: contents;
-                                  --dls19-brand-color: var(--f-k-smk-x);
+                                  --dls19-brand-color: var(--gray-900);
                                 ">
                             <div class="_le6wlg">
                               <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth: 1120px">
@@ -29192,7 +29192,7 @@
                         <div
                           style="
                             display: contents;
-                            --dls19-brand-color: var(--f-k-smk-x);
+                            --dls19-brand-color: var(--gray-900);
                           "
                         >
                           <section>
@@ -30267,7 +30267,7 @@
                         <div
                           style="
                             display: contents;
-                            --dls19-brand-color: var(--f-k-smk-x);
+                            --dls19-brand-color: var(--gray-900);
                           "
                         >
                           <div class="_88xxct">
@@ -30478,7 +30478,7 @@
                         <div
                           style="
                             display: contents;
-                            --dls19-brand-color: var(--f-k-smk-x);
+                            --dls19-brand-color: var(--gray-900);
                           "
                         >
                           <section>
@@ -32067,7 +32067,7 @@
                         <div
                           style="
                             display: contents;
-                            --dls19-brand-color: var(--f-k-smk-x);
+                            --dls19-brand-color: var(--gray-900);
                           "
                         >
                           <section>
