--- a/products-mobile.html
+++ b/products-mobile.html
@@ -13218,7 +13218,7 @@
                           <div
                             style="
                               display: contents;
-                              --dls19-brand-color: var(--f-k-smk-x);
+                              --dls19-brand-color: var(--gray-900);
                             "
                           >
                             <div class="_le6wlg">
@@ -14413,7 +14413,7 @@
                         <div
                           style="
                             display: contents;
-                            --dls19-brand-color: var(--f-k-smk-x);
+                            --dls19-brand-color: var(--gray-900);
                           "
                         >
                           <div class="_1ynbv25">
@@ -14631,7 +14631,7 @@
                           <div
                             style="
                               display: contents;
-                              --dls19-brand-color: var(--f-k-smk-x);
+                              --dls19-brand-color: var(--gray-900);
                             "
                           >
                             <div class="_le6wlg">
@@ -16270,7 +16270,7 @@
                           <div
                             style="
                               display: contents;
-                              --dls19-brand-color: var(--f-k-smk-x);
+                              --dls19-brand-color: var(--gray-900);
                             "
                           >
                             <div class="_le6wlg">
