--- a/host-liability-insurance.html
+++ b/host-liability-insurance.html
@@ -453,7 +453,7 @@
                                   <div class="c123j3p3 dir dir-ltr">
                                     <div class="flex c1gk634l dir dir-ltr">
                                       <div class="i1cqlwxc dir dir-ltr">
-                                        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: var(--fhi-qn-u);">
+                                        <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: var(--warning-color);">
                                           <path
                                               d="m15.5 1v8a5.5 5.5 0 0 0 5.279 5.496l.221.004h8v11.5a5 5 0 0 1 -5 5h-16a5 5 0 0 1 -5-5v-20a5 5 0 0 1 5-5zm4.5.586 8.414 8.414a2 2 0 0 1 .586 1.414v.086h-8a2.5 2.5 0 0 1 -2.495-2.336l-.005-.164v-8h.086a2 2 0 0 1 1.414.586z">
                                           </path>
