--- a/accessibility.html
+++ b/accessibility.html
@@ -397,7 +397,7 @@
             data-testid="AccessibilityLandingPage.NAV_BAR" style="width: 100%;height: 72px;">
             <nav class="_1lovwbn collapsable-navbar" style="width: 100%;height: 72px;">
               <div class="accessibility__container dir dir-ltr">
-                <div class="_3zbxjh" style="padding-right: var(--cy-o-aco);padding-left: var(--cy-o-aco);"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
+                <div class="_3zbxjh" style="padding-right: var(--spacer-11);padding-left: var(--spacer-11);"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
                       aria-hidden="false" aria-label="Airbnb homepage" focusable="false"
                       style="height:1em;width:1em;display:block;fill:currentColor">
                       <path
