fix 3 dots pos in loader

--- a/help-loader.html
+++ b/help-loader.html
@@ -441,7 +441,7 @@
                           </div>
                           <div id="FMP-target">
                             <div id="role_tabs" role='tablistcontainer'>
-                              <div style="height: calc(100vh - 600px) !important;">
+                              <div style="height: calc(100vh - 600px) !important;position: relative;">
                                 <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
                                   <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                 </span>
