--- a/experiences-loader.html
+++ b/experiences-loader.html
@@ -271,7 +271,7 @@
                       </div>
                     </div>
                     <div class="flex-before-after dir dir-ltr">
-                      <div style="height: calc(100vh - 600px) !important;">
+                      <div style="height: calc(100vh - 600px) !important;position: relative;">
                         <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
                          <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                         </span>
