fix wishlist-loader mobile

--- a/wishlist-loader.html
+++ b/wishlist-loader.html
@@ -251,13 +251,29 @@
                           <div class="_1nkqnd0" data-container="WishlistDetailLayout" id="WishlistDetailLayout" tabindex="-1">
                             <div class="_lot51y">
                               <div class="_twmmpk">
-                                <span aria-busy="true" style="display: block; height: 19px; width: 35%; background-color: white; border-radius: 4px;">
-                                  <span
-                                   class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr"
-                                   style="height: 100%; width: 100%; border-radius: 4px;"
-                                  >
+                                
+                                <section>
+                                  <div class="_1qi90fi">
+                                    <div class="tfuul6v dir dir-ltr">
+                                      <section>
+                                        <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
+                                          <div class="t1wq0eng dir dir-ltr"><span aria-busy="true" style="display: block; height: 15px; width: 51%; background-color: white; border-radius: 4px;">
+                                  <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;">
                                   </span>
-                                </span>
+                                </span></div>
+                                        </h1>
+                                        <div class="f1k4u1lr dir dir-ltr" style="margin-top: 16px">
+                                          <div class=" dir dir-ltr" role="group" id="filter-menu-chip-group" aria-labelledby="filter-menu-chip-group-DLS-chipGroup-label"><span aria-busy="true" style="display: block; height: 7px; width: 35%; background-color: white; border-radius: 4px;">
+                                  <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%; ">
+                                  </span>
+                                </span></div>
+                                        </div>
+                                        <div class="d1sd2nyg dir dir-ltr">
+                                        </div>
+                                      </section>
+                                    </div>
+                                  </div>
+                                </section>
                               </div>
                             </div>
                             <div class="_b7s4l4">
