fix accessiblity header logo hide on scroll

--- a/accessibility.html
+++ b/accessibility.html
@@ -21,7 +21,7 @@
         <div class="initial dir dir-ltr" data-tracking-events="impression"
           data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
           data-testid="AccessibilityLandingPage.NAV_BAR">
-          <nav class="_1lovwbn">
+          <nav class="_1lovwbn" style="position: static !important">
             <div class="accessibility__container dir dir-ltr">
               <div class="_3zbxjh"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
                     aria-hidden="false" aria-label="Airbnb homepage" focusable="false"
