--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>
       9 double bedroom luxury villa with infinity pool - Houses for Rent in
       Malay, Western Visayas, Philippines - Airbnb
@@ -2819,7 +2819,7 @@
                                                   <div></div>
                                                   <div class="_grw3gzy">
                                                     <img
-                                                      src="../assets/images/map-products.png"
+                                                      src="../../assets/images/map-products.png"
                                                       alt=""
                                                       class="max-w-full"
                                                     />
@@ -16462,7 +16462,7 @@
       </div>
     </div>
 
-    <script src="assets/js/components.js"></script>
-    <script src="assets/js/pages/products.js" defer></script>
+    <script src="../assets/js/components.js"></script>
+    <script src="../assets/js/pages/products.js" defer></script>
   </body>
 </html>
