--- a/help/all-topics.html
+++ b/help/all-topics.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>All topics - Airbnb Help Center</title>
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
   </head>
   <body>
     <div data-application="true">
@@ -2630,6 +2630,6 @@
       </div>
     </div>
 
-    <script src="assets/js/components.js" defer></script>
+    <script src="../assets/js/components.js" defer></script>
   </body>
 </html>
