--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
   
 
     <title>Home - Resource Center - Airbnb</title>
@@ -2123,6 +2123,6 @@
         </div>
       </div>
     </div>
-    <script src="assets/js/pages/resources.js" defer></script>
+    <script src="../assets/js/pages/resources.js" defer></script>
   </body>
 </html>
