--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Become a Social Impact Experience Host</title>
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
   </head>
   <body>
     <div data-application="true">
@@ -3333,6 +3333,6 @@ Harlem, New York City"
       </div>
     </div>
 
-    <script src="assets/js/components.js" defer></script>
+    <script src="../assets/js/components.js" defer></script>
   </body>
 </html>
