--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="assets/css/pages.css" />
-  <link rel="stylesheet" href="assets/css/global.css" />
+  <link rel="stylesheet" href="../assets/css/pages.css" />
+  <link rel="stylesheet" href="../assets/css/global.css" />
 
   <title>Messages • Airbnb</title>
 </head>
@@ -4269,8 +4269,8 @@
     </div>
   </div>
 
-  <script src="assets/js/pages/messages.js" defer></script>
-  <script src="assets/js/components.js"></script>
+  <script src="../assets/js/pages/messages.js" defer></script>
+  <script src="../assets/js/components.js"></script>
 </body>
 
 </html>
