--- a/media/media-home.html
+++ b/media/media-home.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
-    <link rel="stylesheet" href="assets/css/media.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/media.css" />
   
 
     <title>
@@ -2055,5 +2055,5 @@
       </nav>
     </div>
   </body>
-  <script src="assets/js/pages/media.js" defer></script>
+  <script src="../assets/js/pages/media.js" defer></script>
 </html>
