clone page no. 11

--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -1268,7 +1268,7 @@
                               </div>
                           </div>
                           <div class="inline-block" style="margin-right:16px">
-                            <button type="button" class="_1ynkfbb">
+                            <button type="button" class="_1ynkfbb like">
                               <span class="_3hmsj">
                                 <svg viewBox="0 0 16 16" role="img" aria-hidden="false" aria-label="Helpful" focusable="false" style="height:1em;width:1em;fill:currentColor">{`{`}/* If you update this, update thumbs-up-alt-mirror.svg too */{`}`}
                                   <path d="m14.5 7.63c0-.97-.8-1.63-2-1.63l-4.5.01c.04-.05.11-.12.2-.21.39-.4 1.04-1.06 1.41-1.87.31-.68.46-1.61.37-2.32-.09-.65-.59-1.61-1.61-1.61-.44 0-1.23.2-1.6 1.52a3.12 3.12 0 0 0 -.05.22c-.14.62-.44 1.93-3.11 2.86-2.4.82-3.61 2.81-3.61 5.9 0 3.44 1.98 5.5 5.3 5.5h6.2c1.2 0 2-.65 2-1.63 0-.33-.09-.64-.24-.89.62-.34.74-.94.74-1.36a1.66 1.66 0 0 0 -.24-.9c.65-.37.74-1.01.74-1.35 0-.28-.06-.77-.45-1.14.29-.28.45-.66.45-1.11">
@@ -1276,7 +1276,7 @@
                                 </svg>
                               </span>
                             </button>
-                            <button type="button" class="_1ynkfbb">
+                            <button type="button" class="_1ynkfbb dislike">
                               <span class="_3hmsj">
                                 <div class="_1em5lzu">
                                   <svg viewBox="0 0 16 16" role="img" aria-hidden="false" aria-label="Not helpful" focusable="false" style="height:1em;width:1em;fill:currentColor">{`{`}/* If you update this, update thumbs-down-alt-mirror.svg too */{`}`}
@@ -2286,5 +2286,6 @@
       </div>
     </div>
     <script src="../assets/js/pages/resources.js" defer></script>
+    <script src="../assets/js/pages/article.js" defer></script>
   </body>
 </html>
