add video on hover feature, style.css, rename card-alt-4__

--- a/account/profile.html
+++ b/account/profile.html
@@ -2329,15 +2329,15 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           <div></div>
                                                         </div>
                                                         <div
-                                                          class="card-alt-4__overlay-bottom dir dir-ltr"
+                                                          class="card-alt-4__overlay-bottom invisible dir dir-ltr"
                                                         >
                                                           <button
                                                             aria-label="Pause "
                                                             type="button"
-                                                            class="card-alt-4__btn-pause dir dir-ltr"
+                                                            class="card-alt-4__btn dir dir-ltr"
                                                           >
                                                             <span
-                                                              class="card-alt-4__btn-pause-icon-wrapper dir dir-ltr"
+                                                              class="relative dir dir-ltr"
                                                               ><svg
                                                                 viewBox="0 0 16 16"
                                                                 xmlns="http://www.w3.org/2000/svg"
