--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -1164,15 +1164,15 @@
                                                         </div>
                                                       </div>
                                                       <div
-                                                        class="card-alt-4__overlay-bottom dir dir-ltr"
+                                                        class="card-alt-4__overlay-bottom invisible dir dir-ltr"
                                                       >
                                                         <button
                                                           aria-label="Pause Design A Hand-Woven Wall Hanging"
                                                           type="button"
-                                                          class="card-alt-4__btn-pause dir dir-ltr"
+                                                          class="card-alt-4__btn dir dir-ltr"
                                                         >
                                                           <span
-                                                            class="card-alt-4__btn-pause-icon-wrapper dir dir-ltr"
+                                                            class="relative dir dir-ltr"
                                                             ><svg
                                                               viewBox="0 0 16 16"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -1420,15 +1420,15 @@
                                                         </div>
                                                       </div>
                                                       <div
-                                                        class="card-alt-4__overlay-bottom dir dir-ltr"
+                                                        class="card-alt-4__overlay-bottom invisible dir dir-ltr"
                                                       >
                                                         <button
                                                           aria-label="Pause Healing Body Tuning Session"
                                                           type="button"
-                                                          class="card-alt-4__btn-pause dir dir-ltr"
+                                                          class="card-alt-4__btn dir dir-ltr"
                                                         >
                                                           <span
-                                                            class="card-alt-4__btn-pause-icon-wrapper dir dir-ltr"
+                                                            class="relative dir dir-ltr"
                                                             ><svg
                                                               viewBox="0 0 16 16"
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -1676,15 +1676,15 @@
                                                         </div>
                                                       </div>
                                                       <div
-                                                        class="card-alt-4__overlay-bottom dir dir-ltr"
+                                                        class="card-alt-4__overlay-bottom invisible dir dir-ltr"
                                                       >
                                                         <button
                                                           aria-label="Pause Healing retreat with an acupuncturist"
                                                           type="button"
-                                                          class="card-alt-4__btn-pause dir dir-ltr"
+                                                          class="card-alt-4__btn dir dir-ltr"
                                                         >
                                                           <span
-                                                            class="card-alt-4__btn-pause-icon-wrapper dir dir-ltr"
+                                                            class="relative dir dir-ltr"
                                                             ><svg
                                                               viewBox="0 0 16 16"
                                                               xmlns="http://www.w3.org/2000/svg"
