--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -5476,15 +5476,15 @@
                                                             </div>
                                                           </div>
                                                           <div
-                                                            class="card-alt-4__overlay-bottom dir dir-ltr"
+                                                            class="card-alt-4__overlay-bottom invisible dir dir-ltr"
                                                           >
                                                             <button
                                                               aria-label="Pause Discover Sunny Fort Lauderdale"
                                                               type="button"
-                                                              class="card-alt-4__btn-pause dir dir-ltr"
+                                                              class="card-alt-4__btn dir dir-ltr"
                                                             >
                                                               <span
-                                                                class="card-alt-4__btn-pause-icon-wrapper dir dir-ltr"
+                                                                class="relative dir dir-ltr"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -5844,15 +5844,15 @@
                                                             </div>
                                                           </div>
                                                           <div
-                                                            class="card-alt-4__overlay-bottom dir dir-ltr"
+                                                            class="card-alt-4__overlay-bottom invisible dir dir-ltr"
                                                           >
                                                             <button
                                                               aria-label="Pause Wu Qin Xi, Five Animal Plays Qigong"
                                                               type="button"
-                                                              class="card-alt-4__btn-pause dir dir-ltr"
+                                                              class="card-alt-4__btn dir dir-ltr"
                                                             >
                                                               <span
-                                                                class="card-alt-4__btn-pause-icon-wrapper dir dir-ltr"
+                                                                class="relative dir dir-ltr"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
@@ -6182,15 +6182,15 @@
                                                             </div>
                                                           </div>
                                                           <div
-                                                            class="card-alt-4__overlay-bottom dir dir-ltr"
+                                                            class="card-alt-4__overlay-bottom invisible dir dir-ltr"
                                                           >
                                                             <button
                                                               aria-label="Pause Relaxing Traditional Shadow Plays from Japan"
                                                               type="button"
-                                                              class="card-alt-4__btn-pause dir dir-ltr"
+                                                              class="card-alt-4__btn dir dir-ltr"
                                                             >
                                                               <span
-                                                                class="card-alt-4__btn-pause-icon-wrapper dir dir-ltr"
+                                                                class="relative dir dir-ltr"
                                                                 ><svg
                                                                   viewBox="0 0 16 16"
                                                                   xmlns="http://www.w3.org/2000/svg"
