--- a/articles.html
+++ b/articles.html
@@ -1333,7 +1333,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -1538,7 +1538,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -1739,7 +1739,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -1947,7 +1947,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -2130,7 +2130,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -2313,7 +2313,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -2496,7 +2496,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -2683,7 +2683,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -2870,7 +2870,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -3053,7 +3053,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -3236,7 +3236,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
@@ -3419,7 +3419,7 @@
                                          aria-hidden="true"
                                          role="presentation"
                                          focusable="false"
-                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"
+                                         style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: #FFF; stroke-width: 2; overflow: visible;"
                                         >
                                          <path
                                           d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
